Revision history for App-Doh

          - Fixed configuration assetdir attribute default value
          - Fixed daemon access log and pid file names

0.15.1    2015-12-18 16:25:27
          - Merged docs path config into main file
          - Moved users.json to ctrldir
          - Switch log and po filenames to class2appdir appclass
          - Randomised secret generation

0.14.1    2015-12-09 01:28:40
          - Default mount point /doh allows for redirect to static index
          - Fixed Config components needed to be lazy
          - Made env_var into a class method
          - Uses Web::Components::Role::TT
          - Idiomatic rename of Functions to Util
          - Moving Role::Template to own distribution

0.13.1    2015-08-31 18:23:12
          - Updated prereqs

0.12.1    2015-08-31 18:12:16
          - Merged Config common_links into stash_attr
          - Fixed locale/language leaky abstraction from request object
          - Added expected_rv parameters to Daemon
          - Merged Preference and CommonLinks roles into PageConfiguration
          - Moved Usul attribute constructor to Functions

0.11.1    2015-08-28 12:54:54
          - Created Config stash_attr from preferences and lists in code
          - Passing tests again
          - Switched to Web::Components
          - Enhanced type constraint names
          - Renamed Web::Components loader and role
          - Made APP_DOH the env var prefix for consistancy
          - Stopped putting request object in stash
          - Made cdnjs configurable via jslibs in Config
          - Stopped using state keyword
          - Model execute now throws if method not found
          - Added support for making Debian packages
          - Added missing middleware dependecies
          - Simplified load_components signature
          - Added make-site-tarball
          - Added caching to generate make function
          - Config monikers was replace with components